--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar res-navheight background">
         <ul class="nav-list visibility">
-            <div class="logo"><img src="images/Profile.jpg" alt="Profile"></div>
+            <div class="logo"><img src="Images/Profile.jpg" alt="Profile"></div>
 
             <li class="list-item"><a href="#Home">Home</a></li>
             <li class="list-item"><a href="#About">About</a></li>
@@ -49,7 +49,7 @@
                     <button class="btn-medium">Watch Video</button>
             </div>
             <div class="second-half">
-                <img src="images/Profile.jpg" alt="Laptop">
+                <img src="Images/Profile.jpg" alt="Laptop">
             </div>
         </div>
     </section>
@@ -64,13 +64,13 @@
             </p>
             </div>
             <div class="s2-box-right">
-            <img src="images/1.jpg" alt="">
+            <img src="Images/1.jpg" alt="">
             </div>
             </div>
 
             <div class="s2-box center-box">
                 <div class="s2-box-right">
-                    <img src="images/2.jpg" alt="">
+                    <img src="Images/2.jpg" alt="">
                 </div>
                 <div class="s2-box-left">
                     <p class="large-text">Transforming Education in Pakistan</p>
@@ -103,7 +103,7 @@
                     </p>
                 </div>
                 <div class="s2-box-right">
-                    <img src="images/3.jpg" alt="">
+                    <img src="Images/3.jpg" alt="">
                 </div>
             </div>
 
